--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,12 @@
     android:layout_height="match_parent"
     tools:context=".Activity.MainActivity">
 
+    <ProgressBar
+        android:id="@+id/progress"
+        style="@android:style/Widget.ProgressBar.Large"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 
     <androidx.appcompat.widget.AppCompatSpinner
         android:id="@+id/studentList"
